# garden-fish-macro

./: .gitignore  README.md  entry.py  pyproject.toml
scripts/: build.ps1
src/garden_macro/: __init__.py  __main__.py  config.py  detector.py  input_controller.py  runner.py  ui.py
tests/: test_detector.py
