[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garden-fish-macro"
version = "2.0.0"
description = "Simple garden farming macro with pixel detection for custom Minecraft servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyautogui>=0.9.54",
  "pillow>=9.0.0",
]

[project.scripts]
garden-macro = "garden_macro.ui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
